# job-apply-claw

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  facade.py
cli/: __init__.py  main.py
config_template/: config.json  profile.json
domain/: __init__.py  utils.py
domain/models/: __init__.py
domain/ports/: __init__.py
domain/prompts/: __init__.py  system_prompt.py  task_prompts.py
domain/services/: __init__.py  account_flow.py  captcha.py  debug.py  job_application.py  onboarding.py  work_authorization.py
infra/: __init__.py
infra/agent/: __init__.py  browser_agent.py
infra/browser/: __init__.py  mock_session.py  playwright_session.py  playwright_tools.py
infra/config/: __init__.py  filesystem_config_provider.py
infra/interaction/: __init__.py  console_user_interaction.py
infra/llm/: __init__.py  openai_tool_calling_client.py
infra/logs/: __init__.py  filesystem_debug_artifact_store.py
infra/persistence/: __init__.py  _datetime.py  sqlite_config_repository.py  sqlite_credential_repository.py  sqlite_job_application_repository.py  sqlite_onboarding_repository.py
infra/runtime/: __init__.py  structured_logger.py  uuid_id_generator.py
infra/telegram/: __init__.py  bot_api.py  bot_listener.py
job_apply_claw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py
test/fixtures/: __init__.py
test/integration/: conftest.py  test_apply_flow_mock_sites.py  test_sqlite_config_repository.py  test_sqlite_credential_repository.py  test_sqlite_job_application_repository.py  test_sqlite_onboarding_repository.py
test/mocks/: __init__.py  fake_browser_session.py  fake_browser_tools.py  fake_config_provider.py  fake_config_repository.py  fake_credential_repository.py  fake_job_application_repository.py  fake_onboarding_repository.py  fake_runtime.py  fake_user_interaction.py  scripted_llm_client.py
test/unit/: test_advanced_flows.py  test_application_facade.py  test_browser_agent.py  test_domain_models_ports.py  test_filesystem_config_provider.py  test_filesystem_debug_artifact_store.py  test_fixtures.py  test_job_application_agent.py  test_onboarding_service.py  test_prompts.py  (+5 more)
(+27 files in other folders)
