[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-apply-claw"
version = "0.1.0"
description = "Agentic bot core for automating job applications via browser automation and chat-based user interaction."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Job Apply Claw", email = "you@example.com" },
]
dependencies = []

[project.optional-dependencies]
browser = [
  "playwright>=1.40",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-bdd>=7.0",
  "pre-commit>=4.0",
  "playwright>=1.40",
]

[project.scripts]
job-apply-cli = "cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "cli*", "domain*", "infra*", "test*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test"]

